--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.0",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.14",
     "geist": "^1.2.2",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
