--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.0",
     "react-textarea-autosize": "^8.5.3",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.15.1",
