--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.0",
+    "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
